--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -6,28 +6,13 @@ on:
   workflow_dispatch:
 
 env:
-  # time zone
   TZ: Asia/Shanghai
-
-  # network proxy aggregate config
   SUBSCRIBE_CONF: ${{ secrets.SUBSCRIBE_CONF }}
-
-  # token
   PUSH_TOKEN: ${{ secrets.PUSH_TOKEN }}
-
-  # network reachable
   REACHABLE: ${{ vars.REACHABLE }}
-
-  # not check connective
   SKIP_ALIVE_CHECK: ${{ vars.SKIP_ALIVE_CHECK }}
-
-  # skip remark
   SKIP_REMARK: ${{ vars.SKIP_REMARK }}
-
-  # workflow mode
   WORKFLOW_MODE: ${{ vars.WORKFLOW_MODE }}
-
-  # include spwcial protocols, such vless hysteria2 and hysteria
   ENABLE_SPECIAL_PROTOCOLS: ${{ vars.ENABLE_SPECIAL_PROTOCOLS }}
 
 jobs:
@@ -50,8 +35,39 @@ jobs:
       - name: Install
         run: pip3 install -r requirements.txt
 
+      # === 在这里插入（新增） ===
+      - name: Install jq (for JSON editing)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+
+      - name: Build runtime config.json (inject push->gist)
+        env:
+          GIST_LINK: ${{ secrets.GIST_LINK }}   # 建议填 Gist 的 ID（链接最后那段）
+          GIST_PAT:  ${{ secrets.GIST_PAT }}    # 需要 Gists: Read & write 权限
+        run: |
+          set -eux
+          # 1) 复制默认配置
+          cp subscribe/config/config.default.json config.json
+
+          # 2) 注入 Gist 推送配置（产物在根目录：clash.yaml）
+          jq --arg tok "${GIST_PAT}" --arg id "${GIST_LINK}" '
+            .storage.engine = "gist" |
+            .storage.base   = "https://api.github.com" |
+            .storage.domain = "https://gist.github.com" |
+            .storage.token  = $tok |
+            .storage.items  = {
+              "xxx-clash": { "id": $id, "filename": "clash.yaml" }
+            }
+          ' config.json > config.tmp && mv config.tmp config.json
+
+          echo "==== resolved storage (token redacted) ===="
+          sed -E 's/"token"\s*:\s*"[^"]+"/"token":"***"/' config.json
+      # === 插入结束 ===
+
       - name: Process
-        run: python -u subscribe/process.py --overwrite
+        run: |
+          python -u subscribe/process.py --config config.json --overwrite
 
       - name: Timestamp
         run: date
