--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -7,7 +7,6 @@ on:
 
 env:
   TZ: Asia/Shanghai
-  # 你自己仓库里已有的环境变量保留
   SUBSCRIBE_CONF: ${{ secrets.SUBSCRIBE_CONF }}
   PUSH_TOKEN: ${{ secrets.PUSH_TOKEN }}
   REACHABLE: ${{ vars.REACHABLE }}
@@ -19,7 +18,6 @@ env:
 jobs:
   process:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,11 +34,11 @@ jobs:
       - name: Install
         run: pip3 install -r requirements.txt
 
-      # ====== 自检：Secrets 存在 ======
+      # 检查 Secrets 是否存在
       - name: Validate secrets (non-empty)
         env:
-          GIST_LINK: ${{ secrets.GIST_LINK }}   # 必须是 Gist 的 ID（不是 URL）
-          GIST_PAT:  ${{ secrets.GIST_PAT }}    # 需要 Gists: Read & write
+          GIST_LINK: ${{ secrets.GIST_LINK }}
+          GIST_PAT:  ${{ secrets.GIST_PAT }}
         run: |
           set -eux
           test -n "$GIST_LINK" || (echo "GIST_LINK is empty"; exit 1)
@@ -48,7 +46,7 @@ jobs:
           echo "GIST_LINK length: ${#GIST_LINK}"
           echo "GIST_PAT   length: ${#GIST_PAT}"
 
-      # ====== 自检：PAT 能访问该 Gist（要求 GIST_LINK=ID）======
+      # 用 PAT 测试是否能访问该 Gist（要求 GIST_LINK=ID）
       - name: Check PAT can access Gist
         env:
           GIST_LINK: ${{ secrets.GIST_LINK }}
@@ -61,7 +59,7 @@ jobs:
           echo "HTTP $code"
           [ "$code" = "200" ] || (echo "PAT/GIST_LINK check failed"; exit 1)
 
-      # ====== 生成运行时 config.json，注入 Gist 推送配置 ======
+      # 用 Python 生成 config.json 并注入 Gist 推送配置（产物：根目录 clash.yaml）
       - name: Build runtime config.json (inject push->gist)
         env:
           GIST_LINK: ${{ secrets.GIST_LINK }}
@@ -70,11 +68,10 @@ jobs:
           set -eux
           test -f subscribe/config/config.default.json
           python - <<'PY'
-import json, os
+import json, os, sys
 with open('subscribe/config/config.default.json','r',encoding='utf-8') as f:
     cfg = json.load(f)
-
-# 注入 storage -> gist；产物在根目录，文件名为 clash.yaml
+# 注入 storage->gist
 cfg.setdefault('storage', {})
 cfg['storage']['engine'] = 'gist'
 cfg['storage']['base']   = 'https://api.github.com'
@@ -83,25 +80,19 @@ cfg['storage']['token']  = os.environ['GIST_PAT']
 cfg['storage']['items']  = {
     "xxx-clash": {"id": os.environ['GIST_LINK'], "filename": "clash.yaml"}
 }
-
 with open('config.json','w',encoding='utf-8') as f:
     json.dump(cfg, f, ensure_ascii=False, indent=2)
-
-# 打印（打码 token）
-cfg_mask = json.loads(json.dumps(cfg))
-cfg_mask['storage']['token'] = '***'
-print(json.dumps(cfg_mask, ensure_ascii=False, indent=2))
+print('config.json written (token redacted below):')
+tmp = json.loads(json.dumps(cfg))
+tmp['storage']['token'] = '***'
+print(json.dumps(tmp, ensure_ascii=False, indent=2))
 PY
 
-      # ====== 运行脚本（使用 SUBSCRIBE_CONF + -c，而非 --config）======
       - name: Process
-        env:
-          SUBSCRIBE_CONF: config.json   # 告诉脚本读取这份配置
         run: |
           set -eux
-          python -u subscribe/process.py -c --overwrite
+          python -u subscribe/process.py --config config.json --overwrite
 
-      # ====== 列出产物，辅助排错 ======
       - name: List outputs
         run: |
           set -eux
