--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -5,6 +5,10 @@ on:
     - cron: "05 03 * * *"
     - cron: "05 11 * * *"
 
+env:
+  # 产物文件相对路径：如不在根目录，请改这里
+  OUTPUT_FILE: clash.yaml
+
 jobs:
   process:
     runs-on: ubuntu-latest
@@ -25,64 +29,77 @@ jobs:
       - name: Install
         run: pip3 install -r requirements.txt
 
-      # 1) 自检：Secrets 存在
+      # 1) 自检：Secrets 非空
       - name: Validate secrets (non-empty)
         env:
-          GIST_LINK: ${{ secrets.GIST_LINK }}
-          GIST_PAT:  ${{ secrets.GIST_PAT }}
+          GIST_LINK: ${{ secrets.GIST_LINK }}   # 建议用 Gist 的 ID；也支持整条 URL（下步会提取）
+          GIST_PAT:  ${{ secrets.GIST_PAT }}    # 必须有 Gists: Read & write
         run: |
           set -eux
           test -n "$GIST_LINK" || (echo "GIST_LINK is empty"; exit 1)
           test -n "$GIST_PAT"  || (echo "GIST_PAT is empty";  exit 1)
 
-      # 2) 生成运行时 config.json 并注入 Gist 推送（支持 GIST_LINK=ID 或 URL）
-      - name: Build runtime config.json (inject push->gist)
+      # 2) 自检：PAT 能访问该 Gist（自动从 URL 抽出 ID）
+      - name: Check PAT can access Gist
         env:
           GIST_LINK: ${{ secrets.GIST_LINK }}
           GIST_PAT:  ${{ secrets.GIST_PAT }}
         run: |
           set -eux
+          RAW="$GIST_LINK"
+          if echo "$RAW" | grep -qi '^http'; then
+            GID="$(echo "$RAW" | sed 's#/*$##' | awk -F/ '{print $NF}')"
+          else
+            GID="$RAW"
+          fi
+          echo "Resolved GIST ID: $GID"
+          CODE=$(curl -s -o /dev/null -w "%{http_code}" \
+            -H "Authorization: token $GIST_PAT" "https://api.github.com/gists/$GID")
+          echo "HTTP $CODE"
+          [ "$CODE" = "200" ] || (echo "PAT/GIST_LINK check failed"; exit 1)
+
+      # 3) 复制默认配置并注入 Gist 推送
+      - name: Build runtime config.json (inject push->gist)
+        env:
+          GIST_LINK: ${{ secrets.GIST_LINK }}
+          GIST_PAT:  ${{ secrets.GIST_PAT }}
+          OUTPUT_FILE: ${{ env.OUTPUT_FILE }}
+        run: |
+          set -eux
           test -f subscribe/config/config.default.json
 
-          # 生成注入脚本（避免 here-doc 缩进/编码问题）
           cat > inject.py <<'PY'
-import json, os, re, sys
+import json, os
 
 # 读取默认配置
 with open('subscribe/config/config.default.json','r',encoding='utf-8') as f:
     cfg = json.load(f)
 
-# 解析 Gist ID：既支持 ID，也支持整条 URL
 raw = os.environ['GIST_LINK'].strip()
-if raw.startswith('http'):
-    # 去掉末尾 '/', 取最后一段
-    gid = raw.rstrip('/').split('/')[-1]
-else:
-    gid = raw
+gid = raw.rstrip('/').split('/')[-1] if raw.startswith('http') else raw
 
-# 注入 storage -> gist；如果你的产物不在根目录，请改 filename
+# 注入 storage -> gist
 cfg.setdefault('storage', {})
 cfg['storage']['engine']  = 'gist'
 cfg['storage']['base']    = 'https://api.github.com'
 cfg['storage']['domain']  = 'https://gist.github.com'
 cfg['storage']['token']   = os.environ['GIST_PAT']
 cfg['storage']['items']   = {
-    "xxx-clash": {"id": gid, "filename": "clash.yaml"}
+    "xxx-clash": {"id": gid, "filename": os.environ['OUTPUT_FILE']}
 }
 
-# 写回运行时配置
 with open('config.json','w',encoding='utf-8') as f:
     json.dump(cfg, f, ensure_ascii=False, indent=2)
 
-# 打印（打码 token）
-cfg['storage']['token'] = '***'
+cfg['storage']['token'] = '***'   # 打码
+print("=== RESOLVED config.json ===")
 print(json.dumps(cfg, ensure_ascii=False, indent=2))
 PY
 
           python inject.py
           rm -f inject.py
 
-      # 3) 跑脚本（脚本用 SUBSCRIBE_CONF 指向我们生成的 config.json）
+      # 4) 跑脚本（使用 SUBSCRIBE_CONF + -c）
       - name: Process
         env:
           SUBSCRIBE_CONF: config.json
@@ -90,12 +107,19 @@ PY
           set -eux
           python -u subscribe/process.py -c --overwrite
 
-      # 4) 列出产物（看是否在根目录产出了 clash.yaml）
-      - name: List outputs
+      # 5) 断言产物存在；否则给出明确提示
+      - name: Verify output exists
+        env:
+          OUTPUT_FILE: ${{ env.OUTPUT_FILE }}
         run: |
           set -eux
-          ls -al
-          [ -f clash.yaml ] && echo "Found clash.yaml in repo root" || echo "No clash.yaml in repo root"
+          if [ ! -f "$OUTPUT_FILE" ]; then
+            echo "ERROR: Output file not found: $OUTPUT_FILE"
+            echo "If your script writes to another path, edit env.OUTPUT_FILE in this workflow"
+            exit 1
+          fi
+          echo "Found: $OUTPUT_FILE"
+          ls -al "$OUTPUT_FILE"
 
       - name: Timestamp
         run: date
