--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -6,7 +6,7 @@ on:
     - cron: "05 11 * * *"
 
 env:
-  # 产物文件相对路径：如不在根目录，请改这里
+  # 产物文件相对路径（如果不是根目录，请改成真实路径，例如 build/clash.yaml）
   OUTPUT_FILE: clash.yaml
 
 jobs:
@@ -29,36 +29,15 @@ jobs:
       - name: Install
         run: pip3 install -r requirements.txt
 
-      # 1) 自检：Secrets 非空
       - name: Validate secrets (non-empty)
         env:
-          GIST_LINK: ${{ secrets.GIST_LINK }}   # 建议用 Gist 的 ID；也支持整条 URL（下步会提取）
-          GIST_PAT:  ${{ secrets.GIST_PAT }}    # 必须有 Gists: Read & write
+          GIST_LINK: ${{ secrets.GIST_LINK }}   # 可填 ID 或完整 URL
+          GIST_PAT:  ${{ secrets.GIST_PAT }}    # 需要 Gists: Read & write
         run: |
           set -eux
           test -n "$GIST_LINK" || (echo "GIST_LINK is empty"; exit 1)
           test -n "$GIST_PAT"  || (echo "GIST_PAT is empty";  exit 1)
 
-      # 2) 自检：PAT 能访问该 Gist（自动从 URL 抽出 ID）
-      - name: Check PAT can access Gist
-        env:
-          GIST_LINK: ${{ secrets.GIST_LINK }}
-          GIST_PAT:  ${{ secrets.GIST_PAT }}
-        run: |
-          set -eux
-          RAW="$GIST_LINK"
-          if echo "$RAW" | grep -qi '^http'; then
-            GID="$(echo "$RAW" | sed 's#/*$##' | awk -F/ '{print $NF}')"
-          else
-            GID="$RAW"
-          fi
-          echo "Resolved GIST ID: $GID"
-          CODE=$(curl -s -o /dev/null -w "%{http_code}" \
-            -H "Authorization: token $GIST_PAT" "https://api.github.com/gists/$GID")
-          echo "HTTP $CODE"
-          [ "$CODE" = "200" ] || (echo "PAT/GIST_LINK check failed"; exit 1)
-
-      # 3) 复制默认配置并注入 Gist 推送
       - name: Build runtime config.json (inject push->gist)
         env:
           GIST_LINK: ${{ secrets.GIST_LINK }}
@@ -68,6 +47,7 @@ jobs:
           set -eux
           test -f subscribe/config/config.default.json
 
+          # 生成注入脚本（务必保持下面行首无额外空格/中文字符）
           cat > inject.py <<'PY'
 import json, os
 
@@ -75,6 +55,7 @@ import json, os
 with open('subscribe/config/config.default.json','r',encoding='utf-8') as f:
     cfg = json.load(f)
 
+# 解析 Gist ID：支持 ID 或完整 URL
 raw = os.environ['GIST_LINK'].strip()
 gid = raw.rstrip('/').split('/')[-1] if raw.startswith('http') else raw
 
@@ -88,10 +69,12 @@ cfg['storage']['items']   = {
     "xxx-clash": {"id": gid, "filename": os.environ['OUTPUT_FILE']}
 }
 
+# 写回运行时配置
 with open('config.json','w',encoding='utf-8') as f:
     json.dump(cfg, f, ensure_ascii=False, indent=2)
 
-cfg['storage']['token'] = '***'   # 打码
+# 打码展示
+cfg['storage']['token'] = '***'
 print("=== RESOLVED config.json ===")
 print(json.dumps(cfg, ensure_ascii=False, indent=2))
 PY
@@ -99,7 +82,6 @@ PY
           python inject.py
           rm -f inject.py
 
-      # 4) 跑脚本（使用 SUBSCRIBE_CONF + -c）
       - name: Process
         env:
           SUBSCRIBE_CONF: config.json
@@ -107,7 +89,6 @@ PY
           set -eux
           python -u subscribe/process.py -c --overwrite
 
-      # 5) 断言产物存在；否则给出明确提示
       - name: Verify output exists
         env:
           OUTPUT_FILE: ${{ env.OUTPUT_FILE }}
@@ -115,7 +96,7 @@ PY
           set -eux
           if [ ! -f "$OUTPUT_FILE" ]; then
             echo "ERROR: Output file not found: $OUTPUT_FILE"
-            echo "If your script writes to another path, edit env.OUTPUT_FILE in this workflow"
+            echo "If your script writes to another path, edit env.OUTPUT_FILE at top of this workflow."
             exit 1
           fi
           echo "Found: $OUTPUT_FILE"
