--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -19,20 +19,22 @@ jobs:
       - name: Install deps
         run: pip install -r requirements.txt
 
-      # 准备配置文件（脚本默认会从 subscribe/config/config.json 读取）
+      # 准备配置：按默认模板复制一份
       - name: Prepare config
         run: |
           mkdir -p subscribe/config
           cp subscribe/config/config.default.json subscribe/config/config.json
 
-      # 关键修复：-c 不接路径；失败则退回无 -c 运行
+      # 关键：该仓库的 -c 是布尔开关，不能跟路径；先尝试带 -c，不行就退回
       - name: Run process
+        shell: bash
         run: |
           set -eux
           python subscribe/process.py -c || python subscribe/process.py
 
-      # 打印目录，确认产物到底在哪
+      # 打印下目录，便于你核对
       - name: Inspect outputs
+        shell: bash
         run: |
           echo "WORKSPACE=$(pwd)"
           ls -lah || true
@@ -40,44 +42,50 @@ jobs:
           ls -lah subscribe/out || true
           ls -lah clash || true
 
-      # 自动定位一个最可能的成品（优先 clash/proxies.yaml，其次根目录 proxies.yaml）
-      - name: Locate output file
+      # 自动定位一个最合适的 YAML 结果文件
+      - name: Locate YAML output
         id: locate
         shell: bash
         run: |
-          if [ -f "clash/proxies.yaml" ]; then
-            echo "file=clash/proxies.yaml" >> $GITHUB_OUTPUT
-          elif [ -f "proxies.yaml" ]; then
-            echo "file=proxies.yaml" >> $GITHUB_OUTPUT
-          else
-            echo "file=" >> $GITHUB_OUTPUT
+          set -e
+          pick=""
+          # 优先常见路径
+          for p in clash/proxies.yaml proxies.yaml subscribe/out/clash.yaml subscribe/out/proxies.yaml; do
+            if [ -f "$p" ]; then pick="$p"; break; fi
+          done
+          # 其次挑最新的 .yaml/.yml
+          if [ -z "$pick" ]; then
+            pick=$(find . -type f \( -name "*.yaml" -o -name "*.yml" \) -printf "%T@ %p\n" | sort -nr | head -n 1 | cut -d' ' -f2- || true)
           fi
-          echo "Located file: ${OUT:-<none>}"
+          # 去掉前缀 ./ 以便后续读文件
+          if [ -n "$pick" ]; then pick="${pick#./}"; fi
+          echo "file=$pick" >> "$GITHUB_OUTPUT"
+          echo "Picked file: ${pick:-<none>}"
 
-      # 用官方 Action 直接调 GitHub API 更新同一个 Gist（更稳）
+      # 用官方 Action 调 API，把定位到的文件内容写到你的 Gist 中（文件名统一叫 clash.yaml）
       - name: Update Gist via GitHub API
-        if: steps.locate.outputs.file != ''
+        if: ${{ steps.locate.outputs.file != '' }}
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GIST_PAT }}  # 你已有的 PAT（需 gist 权限）
+          github-token: ${{ secrets.GIST_PAT }}   # 你已有的 PAT（需 gist 权限）
           script: |
             const fs = require('fs');
             const p = '${{ steps.locate.outputs.file }}';
             const content = fs.readFileSync(p, 'utf8');
             await github.request('PATCH /gists/{gist_id}', {
               gist_id: process.env.GIST_ID,
-              files: { 'proxies.yaml': { content } }  // Gist 里的文件名
+              files: { 'clash.yaml': { content } }   // Gist 里的文件名
             });
         env:
-          GIST_ID: ${{ secrets.GIST_LINK }}      # 你已有的 Gist ID（不是整条URL）
+          GIST_ID: ${{ secrets.GIST_LINK }}       # 你已有的 Gist ID（不是整条 URL）
 
-      # 打包所有产物，方便你从 Actions 页面下载
-      - name: Upload artifacts
+      # 把所有 YAML 结果一并打包，方便你直接下载
+      - name: Upload artifacts (all YAML)
         uses: actions/upload-artifact@v4
         with:
           name: outputs
           path: |
+            **/*.yaml
+            **/*.yml
             subscribe/out/**
-            clash/**/*.yaml
-            **/proxies.yaml
           if-no-files-found: warn
