--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -19,20 +19,18 @@ jobs:
       - name: Install deps
         run: pip install -r requirements.txt
 
-      # 准备配置：按默认模板复制一份
       - name: Prepare config
         run: |
           mkdir -p subscribe/config
           cp subscribe/config/config.default.json subscribe/config/config.json
 
-      # 关键：该仓库的 -c 是布尔开关，不能跟路径；先尝试带 -c，不行就退回
+      # 这个仓库的 -c 是布尔开关，不能跟路径
       - name: Run process
         shell: bash
         run: |
           set -eux
           python subscribe/process.py -c || python subscribe/process.py
 
-      # 打印下目录，便于你核对
       - name: Inspect outputs
         shell: bash
         run: |
@@ -42,44 +40,70 @@ jobs:
           ls -lah subscribe/out || true
           ls -lah clash || true
 
-      # 自动定位一个最合适的 YAML 结果文件
+      # 自动挑一个最合适的 YAML 产物
       - name: Locate YAML output
         id: locate
         shell: bash
         run: |
           set -e
           pick=""
-          # 优先常见路径
           for p in clash/proxies.yaml proxies.yaml subscribe/out/clash.yaml subscribe/out/proxies.yaml; do
-            if [ -f "$p" ]; then pick="$p"; break; fi
+            [ -f "$p" ] && { pick="$p"; break; }
           done
-          # 其次挑最新的 .yaml/.yml
-          if [ -z "$pick" ]; then
-            pick=$(find . -type f \( -name "*.yaml" -o -name "*.yml" \) -printf "%T@ %p\n" | sort -nr | head -n 1 | cut -d' ' -f2- || true)
-          fi
-          # 去掉前缀 ./ 以便后续读文件
-          if [ -n "$pick" ]; then pick="${pick#./}"; fi
+          [ -z "$pick" ] && pick=$(find . -type f \( -name "*.yaml" -o -name "*.yml" \) -printf "%T@ %p\n" | sort -nr | head -n 1 | cut -d' ' -f2- || true)
+          pick="${pick#./}"
           echo "file=$pick" >> "$GITHUB_OUTPUT"
           echo "Picked file: ${pick:-<none>}"
 
-      # 用官方 Action 调 API，把定位到的文件内容写到你的 Gist 中（文件名统一叫 clash.yaml）
-      - name: Update Gist via GitHub API
+      # 先尝试 PATCH 你提供的 Gist；404 则自动新建，并把新 ID 保存出来
+      - name: Upsert Gist (update or create)
+        id: upsert
         if: ${{ steps.locate.outputs.file != '' }}
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GIST_PAT }}   # 你已有的 PAT（需 gist 权限）
+          github-token: ${{ secrets.GIST_PAT }}
           script: |
             const fs = require('fs');
-            const p = '${{ steps.locate.outputs.file }}';
-            const content = fs.readFileSync(p, 'utf8');
-            await github.request('PATCH /gists/{gist_id}', {
-              gist_id: process.env.GIST_ID,
-              files: { 'clash.yaml': { content } }   // Gist 里的文件名
-            });
-        env:
-          GIST_ID: ${{ secrets.GIST_LINK }}       # 你已有的 Gist ID（不是整条 URL）
+            const path = '${{ steps.locate.outputs.file }}';
+            const content = fs.readFileSync(path, 'utf8');
+            const gistId = (process.env.GIST_ID || '').trim();
 
-      # 把所有 YAML 结果一并打包，方便你直接下载
+            async function update() {
+              return await github.request('PATCH /gists/{gist_id}', {
+                gist_id: gistId,
+                files: { 'clash.yaml': { content } }
+              });
+            }
+
+            try {
+              if (gistId) {
+                await update();
+                core.info(`Updated existing gist ${gistId}`);
+                return;
+              }
+            } catch (e) {
+              if (e.status !== 404) throw e;
+              core.warning('Gist not found or no access; creating a new secret gist.');
+            }
+
+            const resp = await github.request('POST /gists', {
+              public: false,
+              description: 'Auto-created by run-process workflow',
+              files: { 'clash.yaml': { content } }
+            });
+            const newId = resp.data.id;
+            fs.writeFileSync('NEW_GIST_ID.txt', newId);
+            core.setOutput('new_id', newId);
+        env:
+          GIST_ID: ${{ secrets.GIST_LINK }}
+
+      - name: Upload new gist id (if created)
+        if: ${{ steps.upsert.outputs.new_id != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: new-gist-id
+          path: NEW_GIST_ID.txt
+
       - name: Upload artifacts (all YAML)
         uses: actions/upload-artifact@v4
         with:
